--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -1,9 +1,13 @@
 @import './base.css';
 
+* {
+  --outline: 1px dotted red;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  background-color : #FFFBFA;
+  background-color: #FFFBFA;
   font-weight: normal;
 }
 
@@ -11,12 +15,20 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #086788;
   transition: 0.4s;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(0, 0%, 100%, 0.2);
   }
+}
+
+.title {
+  font-size: 3.5em;
+  font-weight: bolder;
+  font-family: secular one, sans-serif;
+  color: #000022;
+  margin-top: 1.5em;
 }
