--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -11,7 +11,6 @@
   font-weight: normal;
 }
 
-
 a,
 .green {
   text-decoration: none;
@@ -30,4 +29,42 @@ a,
   font-weight: bolder;
   color: #000022;
   margin-top: 1.5em;
+}
+
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.4s;
+}
+
+.page-enter-from,
+.page-leave-to {
+  opacity: 0;
+  filter: blur(1rem);
+}
+
+.slide-left-enter-active,
+.slide-left-leave-active,
+.slide-right-enter-active,
+.slide-right-leave-active {
+  transition: all 0.2s;
+}
+
+.slide-left-enter-from {
+  opacity: 0;
+  transform: translate(50px, 0);
+}
+
+.slide-left-leave-to {
+  opacity: 0;
+  transform: translate(-50px, 0);
+}
+
+.slide-right-enter-from {
+  opacity: 0;
+  transform: translate(-50px, 0);
+}
+
+.slide-right-leave-to {
+  opacity: 0;
+  transform: translate(50px, 0);
 }
