--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -4,6 +4,10 @@
   --outline: 1px dotted red;
 }
 
+.container{
+  max-width: 1440px;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -97,10 +101,4 @@ a,
   text-align: center;
 
   color: var(--color-cerulean);
-}
-
-body{
-  max-width: 2000px;
-  margin-left:auto;
-  margin-right: auto;
 }
